# NIYOJAN-The-Intelligent-Bridge-Between-Supply-Demand

./: .gitignore  PROJECT_ANALYSIS.md  README.md  demo.py  fix_plain_admin.py  info.txt  pyproject.toml  requirements.txt  seasonal_index.py  verify_changes.py  verify_email_fix.py
backend/: app.py  requirements.txt  test_pdf.py
backend/app/: main.py
backend/tests/: test_llm.py  verify_insight.py
data/: indian_grocery_store_weekly_sales.csv  seasonal_index_per_product.csv  test2_data.csv  test_data.csv
database/: create_db.py  db_manager.py  niyojan.db  schema.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/assets/charsenz-condensed-font/: iFonts-License.txt
frontend/src/components/: ForecastChart.tsx  Layout.tsx
frontend/src/pages/: CreateUser.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Portal.tsx
frontend/src/types/: assets.d.ts  env.d.ts
genai/: insight_engine.py  llm_client.py  prompt_templates.py  schemas.py
lstm/: global_lstm_demand_forecasting.ipynb  label_encoder.pkl  scaler.pkl
lstm/global_lstm_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
lstm/global_lstm_model/variables/: variables.data-00000-of-00001  variables.index
utils/: decision_engine.py  email_handler.py  forecast_engine.py  pdf_report_generator.py  report_generator.py
